CSS: Fix blocked menu in two column view on Phame home view
Summary:
This adds CSS to prevent the document view from overlapping to the blogs and drafts boxes in the right column.

Ref T16473

Test Plan:
- Browse to phame home view using a screen width of at least 1792px
- See that now the links to the individual blogs are fully clickable
- See that all other views (Phriction and Phame posts) are unchanged

Reviewers: #blessed_committers, O1 Blessed Committers, aklapper

Reviewed By: #blessed_committers, O1 Blessed Committers, aklapper

Subscribers: aklapper, tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T16473

Differential Revision: https://we.phorge.it/D26715

--- a/webroot/rsrc/css/phui/phui-document-pro.css
+++ b/webroot/rsrc/css/phui/phui-document-pro.css
@@ -306,6 +306,11 @@ span.visual-only.phui-icon-view.phui-font-fa.fa-users {
 }
 
 @media (min-width: 1792px) {
+  .device-desktop .phui-document-content-outer {
+    display: table;
+    width: calc(100% - 300px);
+  }
+
   div.phui-document-view.phui-document-view-pro.has-curtain {
     max-width: 1332px;
     left: 50px;
